--- a/index.html
+++ b/index.html
@@ -19,5 +19,28 @@
       };
     </script>
   </head>
-  <body class="text"></body>
+  <body>
+    <header class="container mx-auto px-8 mt-8">
+      <div class="flex items-center justify-center gap-5">
+        <div class="space-y-6 w-2/4">
+          <h1 class="font-semibold text-6xl">
+            It's good tea time at
+            <span class="text-orange-600">The Tea House</span>
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate
+            distinctio provident, ipsa impedit nobis commodi!
+          </p>
+          <button
+            class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] hover:from-pink-500 hover:to-yellow-500 ... p-5 text-white text-xl rounded"
+          >
+            Explore More
+          </button>
+        </div>
+        <div class="w-2/4">
+          <img src="./images/banner.png" alt="" />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
