--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
           extend: {
             colors: {
               clifford: "#da373d",
+              freshone: "rgba(87, 118, 57, 0.1);",
+              freshtwo: "rgba(230, 166, 35, 0.1);",
             },
           },
         },
@@ -74,6 +76,62 @@
           <img class="mx-auto" src="./images/tea-1.png" alt="" />
           <h4 class="font-semibold text-3xl">Lemon Tea</h4>
           <p>Creamer could be replaced by fresh milk</p>
+        </div>
+      </div>
+    </section>
+    <!-- Presented Section -->
+    <section class="mt-36">
+      <div class="flex flex-col-reverse md:flex-row gap-9">
+        <div class="md:w-2/4 grid grid-cols-2 gap-5">
+          <div
+            class="bg-gradient-to-r from-[#FF8938] to-[#ff00005e] rounded"
+          ></div>
+          <div
+            class="row-span-2 bg-freshtwo flex items-center justify-center rounded"
+          >
+            <img src="./images/fresh-1.png" alt="" />
+          </div>
+          <div
+            class="row-span-2 bg-freshone flex items-center justify-center rounded"
+          >
+            <img src="./images/fresh-2.png" alt="" />
+          </div>
+          <div
+            class="bg-gradient-to-r from-[#D9D9D9] to-[#ffffff00] rounded"
+          ></div>
+        </div>
+        <div class="md:w-2/4 space-y-5">
+          <h1 class="font-semibold text-4xl md:text-5xl">
+            Great Tea, Freshly Presented
+          </h1>
+          <p>
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
+          </p>
+          <div class="md:w-10/12 w-11/12 space-y-1">
+            <h5 class="font-semibold text-2xl">Unique Taste</h5>
+            <p>
+              A Unique and different style from other teapots gives a luxurious
+              and minimalist impression
+            </p>
+          </div>
+          <div class="md:w-10/12 w-11/12 space-y-1">
+            <h5 class="font-semibold text-2xl">Premium Quality</h5>
+            <p>
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
+          <div class="md:w-10/12 w-11/12 space-y-1">
+            <h5 class="font-semibold text-2xl">Best Sell</h5>
+            <p>
+              Premium Quality that makes tea more elegant and more durable when
+              you use it.
+            </p>
+          </div>
         </div>
       </div>
     </section>
