--- a/index.html
+++ b/index.html
@@ -135,5 +135,80 @@
         </div>
       </div>
     </section>
+    <!-- Clients Section -->
+    <section class="mt-36">
+      <div
+        class="grid md:grid-cols-2 gap-10 bg-orange-600 rounded-lg text-white px-16 p-10"
+      >
+        <div class="w-5/6">
+          <div class="flex flex-col items-center justify-center w-5/6">
+            <h1 class="text-5xl mb-5 mt-10">Meet Our Super Clients</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
+            </p>
+          </div>
+          <div class="mt-5">
+            <button
+              class="font-semibold text-orange-600 px-5 py-2 rounded-sm bg-white"
+            >
+              Show All
+            </button>
+          </div>
+        </div>
+        <!-- Client Review -->
+        <div class="relative">
+          <!-- Top Review -->
+          <div
+            class="absolute bg-white h-72 lg:h-48 rounded-lg text-black flex px-5 items-center top-36 z-10 md:-left-10 w-11/12"
+          >
+            <div class="absolute -top-5 -left-5">
+              <img class="" src="./images/client.png" alt="" />
+            </div>
+            <div>
+              <p class="mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <small>Businessman</small>
+            </div>
+          </div>
+          <!-- Background Review -->
+          <div
+            class="relative bg-white h-72 lg:h-48 rounded-lg text-black flex px-5 items-center opacity-40 ml-10"
+          >
+            <div class="absolute -top-5 -left-5">
+              <img class="" src="./images/client.png" alt="" />
+            </div>
+            <div>
+              <p class="mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <small>Businessman</small>
+            </div>
+          </div>
+          <div
+            class="relative bg-white h-72 lg:h-48 rounded-lg text-black flex px-5 items-center mt-20 opacity-40 ml-10"
+          >
+            <div class="absolute -top-5 -left-5">
+              <img class="" src="./images/client.png" alt="" />
+            </div>
+            <div>
+              <p class="mb-5">
+                We are providing the best and suitable home insurance services
+                for the people who are interested to treatment
+              </p>
+              <h4 class="font-bold">Ilham Yuda</h4>
+              <small>Businessman</small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
