--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
       <div
         class="grid md:grid-cols-2 gap-10 bg-orange-600 rounded-lg text-white px-16 p-10"
       >
-        <div class="w-5/6">
-          <div class="flex flex-col items-center justify-center w-5/6">
+        <div class="w-5/6 flex items-center justify-center">
+          <div class="flex flex-col justify-center w-5/6">
             <h1 class="text-5xl mb-5 mt-10">Meet Our Super Clients</h1>
             <p>
               There are many variations of passages of Lorem Ipsum available,
@@ -149,13 +149,14 @@
               injected humour, or randomised words which don't look even
               slightly believable.
             </p>
-          </div>
-          <div class="mt-5">
-            <button
-              class="font-semibold text-orange-600 px-5 py-2 rounded-sm bg-white"
-            >
-              Show All
-            </button>
+
+            <div class="mt-5">
+              <button
+                class="font-semibold text-orange-600 px-5 py-2 rounded-sm bg-white"
+              >
+                Show All
+              </button>
+            </div>
           </div>
         </div>
         <!-- Client Review -->
@@ -210,5 +211,7 @@
         </div>
       </div>
     </section>
+    <!-- News and Events -->
+    <section></section>
   </body>
 </html>
