--- a/index.html
+++ b/index.html
@@ -212,6 +212,56 @@
       </div>
     </section>
     <!-- News and Events -->
-    <section></section>
+    <section class="mt-36">
+      <div class="w-4/6 text-center mx-auto">
+        <h1 class="text-5xl mb-10">News & Events</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words which don't look even slightly believable.
+        </p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 mt-10">
+        <div
+          class="order-solid border-2 border-slate-200 p-5 rounded space-y-2"
+        >
+          <div class="w-full"><img src="./images/news-1.png" alt="" /></div>
+          <div class="space-y-3">
+            <small>Feb 05, 2023</small>
+            <h5 class="text-2xl font-bold">Collecting 8 points for discount</h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <p class="font-bold">Learn More</p>
+          </div>
+        </div>
+        <div
+          class="order-solid border-2 border-slate-200 p-5 rounded space-y-2"
+        >
+          <div><img src="./images/news-2.png" alt="" /></div>
+          <div class="space-y-3">
+            <small>Feb 05, 2023</small>
+            <h5 class="text-2xl font-bold">Collecting 8 points for discount</h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <p class="font-bold">Learn More</p>
+          </div>
+        </div>
+        <div
+          class="order-solid border-2 border-slate-200 p-5 rounded space-y-2"
+        >
+          <div><img src="./images/news-3.png" alt="" /></div>
+          <div class="space-y-3">
+            <small>Feb 05, 2023</small>
+            <h5 class="text-2xl font-bold">Collecting 8 points for discount</h5>
+            <p>
+              There are many variations of passages of Lorem Ipsum available.
+            </p>
+            <p class="font-bold">Learn More</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
