--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </script>
   </head>
   <body>
+    <!-- Header -->
     <header class="mt-14 container mx-auto px-8 md:px-16">
       <div class="md:flex items-center justify-center gap-7">
         <div class="space-y-6 md:w-2/4">
@@ -34,13 +35,27 @@
             distinctio provident, ipsa impedit nobis commodi!
           </p>
           <button
-            class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] hover:from-pink-500 hover:to-yellow-500 ... p-3 md:p-5 text-white text-xl rounded"
+            class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] hover:from-pink-500 hover:to-yellow-500 ... p-3 md:p-5 text-white text-xl rounded flex items-center"
           >
             Explore More
+            <img class="ml-3" src="./images/icons/arrow.png" alt="" />
           </button>
         </div>
-        <div class="md:w-2/4">
+        <div class="md:w-2/4 relative">
           <img src="./images/banner.png" alt="" />
+          <div
+            class="rounded bg-white z-10 md:-top-24 md:left-32 left-16 relative w-40 h-24"
+          >
+            <div class="flex space-x-3 items-center justify-center">
+              <div>
+                <img src="./images/icons/star.png" alt="" />
+              </div>
+              <div class="flex flex-col items-center">
+                <h1 class="font-bold text-3xl">5.00</h1>
+                <small>Trust Pilot Ratings</small>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
